<resources>
    <string name="app_name">Acro Panda</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="activity_title">Acro Panda</string>
    <string name="choose_pack">Select levels pack</string>
    <string name="buy_premium_button">Buy full version</string>
    <string name="buy_premium_title">Upgrade full version</string>
    <string name="cancel_buy_premium_button">Cancel</string>
    <string name="buy_premium_message">If you want to play more levels upgrade your Acro Panda to full version</string>
    <string name="rate_message">If you enjoy using Acro Panda, please take a moment to rate it. Thanks for your support!</string>
    <string name="rate_later">Remind me later</string>
    <string name="rate_cancel">No, thanks</string>
    <string name="rate">Rate Acro Panda</string>
    <string name="banner_ad_unit_id">ca-app-pub-9510323217062382/1521034353</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-9510323217062382/3611386356</string>
</resources>